<resources>
    <string name="app_name">Mokhalfatak</string>
    <string name="moto">Streamline your traffic violation payments.
        Your one-stop-shop for paying traffic violations</string>
    <string name="getStarted">Get Started</string>
    <string name="congratulations">Congratulations!</string>
    <string name="generatecode">Code Applies for the next 24 hours</string>
    <string name="Completed">Return to homepage</string>
    <string name="licenseplate">License Plate Number</string>
    <string name="scanLPR">Scan License Plate Number</string>
    <string name="findYour">Find your</string>
    <string name="signIn">Sign In</string>
    <string name="noAccount">Don\'t have an account?</string>
    <string name="signUp">Sign Up</string>
    <string name="register">Register</string>
    <string name="firstNameHint">First name</string>
    <string name="lastNameHint">Last name</string>
    <string name="emailHint">Email</string>
    <string name="emailBadgeHint">Badge Number</string>
    <string name="phoneHint">Phone Number</string>
    <string name="passwordHint">Password</string>
    <string name="confirmPasswordHint">Confirm password</string>
    <string name="dateOfBirthHint">Date of birth</string>
    <string name="nationalID">National ID</string>
    <string name="payment">Your payment has been successful.</string>
    <string name="codegenerated">Generated Code is here.</string>
    <string name="proceed">Proceed</string>
    <string name="save">Save</string>
    <string name="profile">Profile</string>
    <string name="viewviolation">View Violations</string>
    <string name="Police">Police Officer</string>
    <string name="User">User</string>
    <string name="Camera">Take A Photo</string>
    <string name="badge_number">Badge Number</string>
    <string-array name="Violations">
        <item>Speeding Ticket</item>
        <item>Double Parking</item>
        <item>Illegal U-turn</item>
        <item>Running a Red Light</item>
        <item>Stop Sign Violation</item>
    </string-array>
</resources>