<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="263dp"
    android:layout_height="344dp"
    android:padding="16dp"
    android:gravity="center"
    android:background="@drawable/rounded_popup"
    android:orientation="vertical"
    android:elevation="8dp">

    <ImageView
        android:id="@+id/fawry_image"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="30dp"
        android:padding="20dp"
        android:scaleType="centerCrop"
        android:src="@drawable/fawry" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="@string/generatecode"
        android:textColor="#2155cd"
        android:textSize="16dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewGeneratedCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/codegenerated"
        android:gravity="center"
        android:textSize="16sp"
        android:layout_marginBottom="15dp"/>
    <TextView
        android:id="@+id/proceedFawry"
        android:layout_width="175dp"
        android:layout_height="50dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/button"
        android:elevation="8dp"
        android:fontFamily="sans-serif"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/proceed"
        android:textColor="@color/white"
        android:textSize="19sp"
        android:textStyle="bold" />


</LinearLayout>
