<?xml version="1.0" encoding="UTF-8"?>

    <LinearLayout
    android:elevation="8dp"
    android:orientation="vertical"
    android:background="@drawable/rounded_popup"
    android:gravity="center"
    android:padding="16dp"
    android:layout_height="344dp"
    android:layout_width="263dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView
        android:background="@drawable/circle_image_background"
        android:padding="20dp"
        android:layout_height="100dp"
        android:layout_width="100dp"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="15dp"
        android:scaleType="centerCrop"
        android:src="@drawable/avatar"
        android:id="@+id/avatar_image"/>

    <TextView
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginBottom="15dp"
        android:text="@string/congratulations"
        android:textSize="23sp"
        android:fontFamily="monospace"
        android:textColor="#2155cd"
        android:textStyle="bold"/>

    <TextView
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginBottom="15dp"
        android:id="@+id/textView"
        android:text="@string/payment"
        android:textSize="16sp"/>

    <TextView
        android:elevation="8dp"
        android:background="@drawable/button"
        android:gravity="center"
        android:layout_height="62dp"
        android:layout_width="195dp"
        android:layout_marginBottom="20dp"
        android:id="@+id/startButton"
        android:text="@string/Completed"
        android:textSize="19sp"
        android:fontFamily="sans-serif"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="25dp"/>

</LinearLayout>